# minibell

./: .env_template  .gitignore  Cargo.toml  docker-compose.yml  package.json  pnpm-lock.yaml  rspack.config.ts  sst.config.ts  uno.config.ts
crates/api/: Cargo.toml
crates/api/src/: duty.rs  lib.rs
crates/astralfinder/: Cargo.toml
crates/astralfinder-wasm/: Cargo.toml
crates/astralfinder-wasm/src/: lib.rs
crates/astralfinder/src/: backtrack.rs  combination.rs  data.rs  format.rs  lib.rs  scheduling.rs  timeslot.rs
crates/cli/: Cargo.toml
crates/cli/src/: duty.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/domain/: access_type.rs  errors.rs  mod.rs
crates/core/src/domain/duty/: mod.rs  repo.rs
crates/core/src/domain/member/: mod.rs  repo.rs  session.rs
crates/core/src/usecases/: authorization.rs  get_auth_info.rs  get_duties.rs  get_duty.rs  get_duty_categories.rs  insert_duties.rs  insert_duty_categories.rs  mod.rs  sign_in.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/infra/: Cargo.toml
crates/infra/src/: discord.rs  lib.rs  session_hmac.rs
crates/infra/src/dynamodb/: duty.rs  member.rs  mod.rs
frontend/: app.config.ts  package.json  panda.config.ts  pnpm-lock.yaml  sst-env.d.ts  vite.config.ts
frontend/src/: app.css  app.tsx  entry-server.tsx
frontend/src/components/: draft-event-form.tsx  jobs-picker.tsx  switcher.tsx  tooltip.tsx
frontend/src/lib/: fetch.ts
frontend/src/lib/components/: Avatar.svelte  utils.svelte.ts
frontend/src/lib/components/breadcrumb/: Item.svelte  Root.svelte  context.svelte.ts  index.ts
frontend/src/lib/components/tabs/: Root.svelte  Tab.svelte  context.svelte.ts  (+1 more)
frontend/src/routes/: (root).tsx  +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/(root)/: (home).tsx  demo.tsx
frontend/src/routes/about/: +page.svelte
frontend/src/routes/auth/: redirect.tsx
frontend/src/utils/: api.ts  fetch.ts  form.ts  ui.ts
frontend_legacy/: package.json  pnpm-lock.yaml  sst-env.d.ts  uno.config.ts
frontend_legacy/src/routes/auth/: redirect.tsx
frontend_legacy/src/utils/: api.ts  fetch.ts  floating-ui.ts  jobs.ts
js/: components.js  job_selector.js  json-enc.js  json_enc.js  main.js
migrations/: 20241011_154228_jobs.surql  20241101_052622_basic-duty.surql
migrations/definitions/: 20241011_154228_jobs.json  20241101_052622_basic-duty.json  _initial.json
migrations/down/: 20241011_154228_jobs.surql  20241101_052622_basic-duty.surql
resources/: jobs.yml
resources/duties/: 00000_types.yml  00001_ultimates.yml
schemas/: duty.surql  event.surql  job.surql  member.surql  script_migration.surql  session.surql
src/: api.rs  main.rs  migration.rs  utils.rs  web.rs
src/api/: auth.rs  dto.rs  duties.rs  events.rs  utils.rs
src/domain/: auth.rs  duty.rs  event.rs  member.rs  mod.rs
src/infra/: db.rs  discord_req.rs  duty_repo.rs  event_repo.rs  member_repo.rs  mod.rs  session_hmac.rs  session_repo.rs
src/repos/: discord.rs  member.rs  mod.rs  session.rs
src/services/: auth.rs  mod.rs
src/usecase/: create_event.rs  draft_event.rs  get_auth_information.rs  get_draft_event.rs  get_duties_list.rs  get_duty.rs  mod.rs  sign_in.rs  verify_auth.rs
src/utils/: db.rs  discord.rs
src/web/: auth.rs  events.rs  utils.rs
styles/: app.css  elements.css
templates/: base.html  create_event.html  edit_event.html  home.html  unauthorized.html
templates/components/: job_selector.html  user_status.html
web/astralfinder/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/astralfinder/src/: app.css  app.d.ts
web/astralfinder/src/lib/: db.svelte.ts  demo.json  finder.ts  format.ts  jobs.ts  members.json
web/astralfinder/src/routes/: +layout.svelte
(+28 files in other folders)
