[package]
name = "minibell"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
askama = "0.12.1"
askama_actix = "0.14.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
sqids = "0.4.1"
surrealdb = "2.0.4"
tokio = "1.40.0"

[profile.dev.package.askama_derive]
opt-level = 3
