[package]
name = "minibell"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.9.0", features = ["cookies"] }
askama = "0.12.1"
askama_actix = "0.14.0"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15.0"
hmac = "0.12.1"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["chrono"] }
sha2 = "0.10.8"
sqids = "0.4.1"
surrealdb = "2.0.4"
surrealdb-migrations = "2.0.0"
thiserror = "1.0.64"
tokio = "1.40.0"
url-escape = "0.1.1"
