[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
minibell = { path = "../core", package = "minibell" }
infra = { path = "../infra" }
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
shaku = "0.6.2"
futures = "0.3.31"
